--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -1,6 +1,57 @@
 <html>
   <body>
-    <!--  -->
-    <h1>Hello World</h1>
+      <!-- dodałem main komende 5 -->
+    <main> 
+        
+        <!-- zmina nazwy na CatPhotoApp 1 -->
+      <h1>CatPhotoApp</h1>
+    <section>
+        <!-- dodałem napis w wilkosci h2 2 -->
+      <h2>Cat Photos</h2>
+        <!-- doałem paragraf 3 -->
+        <!-- dodałem komenarz 4 -->
+        <!-- TODO: Add link to cat photos -->
+         <!-- dodałem link 9 -->
+        <p>Everyone loves <a href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg">cute cats</a> online!</p>
+      <!-- dodałem link 7, dodalem napis 8 -->
+      <p>See more <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in our gallery.</p>
+      <!-- dodałem obrazek 6 nastempie komende alt -->
+      <a href="https://freecatphotoapp.com">
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
+      </a>
+    </section>
+    <section>
+        <h2>Cat Lists</h2>
+        <h3>Things cats love:</h3>
+        <ul>
+            <li>cat nip</li>
+            <li>laser pointers</li>
+            <li>lasagna</li>
+          </ul>
+          <figure>
+            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+            <figcaption>Cats <em>love</em> lasagna.</figcaption>
+          </figure>
+          <h3>Top 3 things cats hate:</h3>
+          <ol>
+            <li>flea treatment</li>
+            <li>thunder</li>
+            <li>other cats</li>
+            </ol>
+            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
+            <figcaption>Cats <strong>hate</strong> other cats.</figcaption>    
+    </section>
+    <section>
+        <h2> Cat Form </h2>
+        <form action="https://freecatphotoapp.com/submit-cat-photo">
+            <label>
+                <label><input id="indoor" type="radio"> Indoor</label>
+                <label><input id="outdoor" type="radio">Outdoor</label>
+                </label>
+            <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+            <button type="submit">Submit</button>
+        </form>
+      </section>
+   </main>
   </body>
 </html>
