--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -49,7 +49,9 @@
                 <legend> Is your cat an indoor or outdoor cat?</legend>        
                 <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor"> Indoor</label>
                 <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
-          </fieldset>    
+          </fieldset>  
+          <fieldset>
+          </fieldset>  
                 </label>
             <input type="text" name="catphotourl" placeholder="cat photo URL" required>
             <button type="submit">Submit</button>
