--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -51,6 +51,7 @@
                 <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
           </fieldset>  
           <fieldset>
+            <legend>What's your cat's personality?</legend>
           </fieldset>  
                 </label>
             <input type="text" name="catphotourl" placeholder="cat photo URL" required>
