dodanie nowej lini imput z mozliwoscia wyboru typu checkbox

--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -52,6 +52,8 @@
           </fieldset>  
           <fieldset>
             <legend>What's your cat's personality?</legend>
+            <input type="checkbox"> Loving 
+            
           </fieldset>  
                 </label>
             <input type="text" name="catphotourl" placeholder="cat photo URL" required>
