--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -1,67 +1,109 @@
 <html>
   <body>
-      <!-- dodałem main komende 5 -->
-    <main> 
-        
-        <!-- zmina nazwy na CatPhotoApp 1 -->
+    <!-- dodałem main komende 5 -->
+    <main>
+      <!-- zmina nazwy na CatPhotoApp 1 -->
       <h1>CatPhotoApp</h1>
-    <section>
+      <section>
         <!-- dodałem napis w wilkosci h2 2 -->
-      <h2>Cat Photos</h2>
+        <h2>Cat Photos</h2>
         <!-- doałem paragraf 3 -->
         <!-- dodałem komenarz 4 -->
         <!-- TODO: Add link to cat photos -->
-         <!-- dodałem link 9 -->
-        <p>Everyone loves <a href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg">cute cats</a> online!</p>
-      <!-- dodałem link 7, dodalem napis 8 -->
-      <p>See more <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in our gallery.</p>
-      <!-- dodałem obrazek 6 nastempie komende alt -->
-      <a href="https://freecatphotoapp.com">
-        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
-      </a>
-    </section>
-    <section>
+        <!-- dodałem link 9 -->
+        <p>
+          Everyone loves
+          <a
+            href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg"
+            >cute cats</a
+          >
+          online!
+        </p>
+        <!-- dodałem link 7, dodalem napis 8 -->
+        <p>
+          See more
+          <a href="https://freecatphotoapp.com" target="_blank">cat photos</a>
+          in our gallery.
+        </p>
+        <!-- dodałem obrazek 6 nastempie komende alt -->
+        <a href="https://freecatphotoapp.com">
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
+            alt="A cute orange cat lying on its back."
+          />
+        </a>
+      </section>
+      <section>
         <h2>Cat Lists</h2>
         <h3>Things cats love:</h3>
         <ul>
-            <li>cat nip</li>
-            <li>laser pointers</li>
-            <li>lasagna</li>
-          </ul>
-          <figure>
-            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-            <figcaption>Cats <em>love</em> lasagna.</figcaption>
-          </figure>
-          <h3>Top 3 things cats hate:</h3>
-          <ol>
-            <li>flea treatment</li>
-            <li>thunder</li>
-            <li>other cats</li>
-            </ol>
-            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-            <figcaption>Cats <strong>hate</strong> other cats.</figcaption>    
-    </section>
-    <section>
-        <h2> Cat Form </h2>
+          <li>cat nip</li>
+          <li>laser pointers</li>
+          <li>lasagna</li>
+        </ul>
+        <figure>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
+            alt="A slice of lasagna on a plate."
+          />
+          <figcaption>Cats <em>love</em> lasagna.</figcaption>
+        </figure>
+        <h3>Top 3 things cats hate:</h3>
+        <ol>
+          <li>flea treatment</li>
+          <li>thunder</li>
+          <li>other cats</li>
+        </ol>
+        <img
+          src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg"
+          alt="Five cats looking around a field."
+        />
+        <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
+      </section>
+      <section>
+        <h2>Cat Form</h2>
         <form action="https://freecatphotoapp.com/submit-cat-photo">
-            <label>
-              <fieldset>
-                <legend> Is your cat an indoor or outdoor cat?</legend>        
-                <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor"> Indoor</label>
-                <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
-          </fieldset>  
-          <fieldset>
-            <legend>What's your cat's personality?</legend>
-            <input id="loving" type="checkbox" name="personality"> 
-            <label for="loving"> Loving</label>
-            <input id="lazy" type="checkbox" name="personality">
-            <label for="lazy"> Lazy</label>
-          </fieldset>  
-                </label>
-            <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-            <button type="submit">Submit</button>
+          <label>
+            <fieldset>
+              <legend>Is your cat an indoor or outdoor cat?</legend>
+              <label
+                ><input
+                  id="indoor"
+                  type="radio"
+                  name="indoor-outdoor"
+                  value="indoor"
+                />
+                Indoor</label
+              >
+              <label
+                ><input
+                  id="outdoor"
+                  type="radio"
+                  name="indoor-outdoor"
+                  value="outdoor"
+                />
+                Outdoor</label
+              >
+            </fieldset>
+            <fieldset>
+              <legend>What's your cat's personality?</legend>
+              <input id="loving" type="checkbox" name="personality" />
+              <label for="loving"> Loving</label>
+              <input id="lazy" type="checkbox" name="personality" />
+              <label for="lazy"> Lazy</label>
+              <input id="energetic" type="checkbox" name="personality" />
+              <label for="energetic"> Energetic</label>
+            </fieldset>
+          </label>
+          <input
+            type="text"
+            name="catphotourl"
+            placeholder="cat photo URL"
+            required
+          />
+          <button type="submit">Submit</button>
         </form>
       </section>
-   </main>
+    </main>
   </body>
 </html>
