dodanie title stronki

--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <title>CatPhotoApp</title>
+  </head>
   <body>
     <!-- dodałem main komende 5 -->
     <main>
@@ -104,7 +107,7 @@
       </section>
     </main>
     <footer>
-      <p>No Copyright - freeCodeCamp.org</p>
+      <p>No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a></p> 
     </footer>
   </body>
 </html>
